<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:gravity="center"
        android:paddingVertical="12dp"
        android:text="@string/title"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_balances_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:text="@string/balances_title"
        android:textColor="@color/gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_balances"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/tv_balances_title" />

    <TextView
        android:id="@+id/tv_currency_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:text="@string/currency_title"
        android:textColor="@color/gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_balances" />

    <ImageView
        android:id="@+id/iv_sell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/arrow"
        android:rotation="180"
        android:src="@mipmap/red_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_currency_title" />

    <TextView
        android:id="@+id/tv_sell_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:text="@string/sell"
        app:layout_constraintBottom_toBottomOf="@id/iv_sell"
        app:layout_constraintStart_toEndOf="@id/iv_sell"
        app:layout_constraintTop_toTopOf="@id/iv_sell" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_sell_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:autofillHints="AUTOFILL_TYPE_PHONE"
        android:background="@android:color/transparent"
        android:gravity="end"
        android:hint="@string/hint_text"
        android:maxLength="15"
        android:inputType="numberDecimal"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/iv_sell"
        app:layout_constraintEnd_toStartOf="@id/tv_sell_currency"
        app:layout_constraintStart_toEndOf="@id/tv_sell_title"
        app:layout_constraintTop_toTopOf="@id/iv_sell" />

    <TextView
        android:id="@+id/tv_sell_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        app:drawableEndCompat="@drawable/expand"
        app:layout_constraintBottom_toBottomOf="@id/iv_sell"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_sell"
        tools:text="EUR" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/line"
        android:paddingHorizontal="30dp"
        android:src="@drawable/gray_line"
        app:layout_constraintBottom_toTopOf="@id/iv_receive"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_sell" />

    <ImageView
        android:id="@+id/iv_receive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/arrow"
        android:src="@mipmap/green_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_sell" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:text="@string/receive"
        app:layout_constraintBottom_toBottomOf="@id/iv_receive"
        app:layout_constraintStart_toEndOf="@id/iv_receive"
        app:layout_constraintTop_toTopOf="@id/iv_receive" />

    <TextView
        android:id="@+id/tv_receive_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:textColor="@color/green"
        android:background="@android:color/transparent"
        android:text="@string/hint_text"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/iv_receive"
        app:layout_constraintEnd_toStartOf="@id/tv_receive_currency"
        app:layout_constraintTop_toTopOf="@id/iv_receive" />

    <TextView
        android:id="@+id/tv_receive_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        app:drawableEndCompat="@drawable/expand"
        app:layout_constraintBottom_toBottomOf="@id/iv_receive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_receive"
        tools:text="EUR" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_background"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>